Corrected styling for mail link

--- a/style/_links.scss
+++ b/style/_links.scss
@@ -82,6 +82,20 @@ main .content_sidebar-note p {
         }
     }
 
+    // Link intern
+    a[href*='localhost'],
+    a[href*='hfkasta'],
+    a[href*='asta.hfk-bremen'],
+    a[href*='asta.uiuiui.digital'] {
+        &::before {
+            background-image: url('../assets/hfkasta_stack.svg#m_link_internal-red');
+        }
+
+        &:hover::before {
+            background-image: url('../assets/hfkasta_stack.svg#m_link_internal');
+        }
+    }
+
     // Mail Link
     a[href*='mailto:'] {
         &::before {
@@ -90,21 +104,6 @@ main .content_sidebar-note p {
 
         &:hover::before {
             background-image: url('../assets/hfkasta_stack.svg#m_link_mail');
-        }
-    }
-
-    // Link intern
-    a[href*='localhost'],
-    a[href*='hfkasta'],
-    a[href*='asta.hfk-bremen'],
-    a[href*='asta.uiuiui.digital'],
-    a[href*='mailto:'] {
-        &::before {
-            background-image: url('../assets/hfkasta_stack.svg#m_link_internal-red');
-        }
-
-        &:hover::before {
-            background-image: url('../assets/hfkasta_stack.svg#m_link_internal');
         }
     }
 
@@ -175,6 +174,20 @@ main .content_sidebar-note p {
             }
         }
 
+        // Link intern
+        a[href*='localhost'],
+        a[href*='hfkasta'],
+        a[href*='asta.hfk-bremen'],
+        a[href*='asta.uiuiui.digital'] {
+            &::before {
+                background-image: url('../assets/hfkasta_stack.svg#l_link_internal-red');
+            }
+
+            &:hover::before {
+                background-image: url('../assets/hfkasta_stack.svg#l_link_internal');
+            }
+        }
+
         // Mail Link
         a[href*='mailto:'] {
             &::before {
@@ -183,21 +196,6 @@ main .content_sidebar-note p {
 
             &:hover::before {
                 background-image: url('../assets/hfkasta_stack.svg#l_link_mail');
-            }
-        }
-
-        // Link intern
-        a[href*='localhost'],
-        a[href*='hfkasta'],
-        a[href*='asta.hfk-bremen'],
-        a[href*='asta.uiuiui.digital'],
-        a[href*='mailto:'] {
-            &::before {
-                background-image: url('../assets/hfkasta_stack.svg#l_link_internal-red');
-            }
-
-            &:hover::before {
-                background-image: url('../assets/hfkasta_stack.svg#l_link_internal');
             }
         }
 
