--- a/style/style.css
+++ b/style/style.css
@@ -1300,6 +1300,52 @@ main .content_sidebar-note p a[href*='https://']:hover::before {
   background-image: url("../assets/hfkasta_stack.svg#m_link_external");
 }
 
+main .content p a[href*='localhost']::before,
+main .content p a[href*='hfkasta']::before,
+main .content p a[href*='asta.hfk-bremen']::before,
+main .content p a[href*='asta.uiuiui.digital']::before,
+main .content li a[href*='localhost']::before,
+main .content li a[href*='hfkasta']::before,
+main .content li a[href*='asta.hfk-bremen']::before,
+main .content li a[href*='asta.uiuiui.digital']::before,
+nav .sidebar_note p a[href*='localhost']::before,
+nav .sidebar_note p a[href*='hfkasta']::before,
+nav .sidebar_note p a[href*='asta.hfk-bremen']::before,
+nav .sidebar_note p a[href*='asta.uiuiui.digital']::before,
+nav .sidebar_note_top p a[href*='localhost']::before,
+nav .sidebar_note_top p a[href*='hfkasta']::before,
+nav .sidebar_note_top p a[href*='asta.hfk-bremen']::before,
+nav .sidebar_note_top p a[href*='asta.uiuiui.digital']::before,
+main .content_sidebar-note p a[href*='localhost']::before,
+main .content_sidebar-note p a[href*='hfkasta']::before,
+main .content_sidebar-note p a[href*='asta.hfk-bremen']::before,
+main .content_sidebar-note p a[href*='asta.uiuiui.digital']::before {
+  background-image: url("../assets/hfkasta_stack.svg#m_link_internal-red");
+}
+
+main .content p a[href*='localhost']:hover::before,
+main .content p a[href*='hfkasta']:hover::before,
+main .content p a[href*='asta.hfk-bremen']:hover::before,
+main .content p a[href*='asta.uiuiui.digital']:hover::before,
+main .content li a[href*='localhost']:hover::before,
+main .content li a[href*='hfkasta']:hover::before,
+main .content li a[href*='asta.hfk-bremen']:hover::before,
+main .content li a[href*='asta.uiuiui.digital']:hover::before,
+nav .sidebar_note p a[href*='localhost']:hover::before,
+nav .sidebar_note p a[href*='hfkasta']:hover::before,
+nav .sidebar_note p a[href*='asta.hfk-bremen']:hover::before,
+nav .sidebar_note p a[href*='asta.uiuiui.digital']:hover::before,
+nav .sidebar_note_top p a[href*='localhost']:hover::before,
+nav .sidebar_note_top p a[href*='hfkasta']:hover::before,
+nav .sidebar_note_top p a[href*='asta.hfk-bremen']:hover::before,
+nav .sidebar_note_top p a[href*='asta.uiuiui.digital']:hover::before,
+main .content_sidebar-note p a[href*='localhost']:hover::before,
+main .content_sidebar-note p a[href*='hfkasta']:hover::before,
+main .content_sidebar-note p a[href*='asta.hfk-bremen']:hover::before,
+main .content_sidebar-note p a[href*='asta.uiuiui.digital']:hover::before {
+  background-image: url("../assets/hfkasta_stack.svg#m_link_internal");
+}
+
 main .content p a[href*='mailto:']::before,
 main .content li a[href*='mailto:']::before,
 nav .sidebar_note p a[href*='mailto:']::before,
@@ -1314,62 +1360,6 @@ nav .sidebar_note p a[href*='mailto:']:hover::before,
 nav .sidebar_note_top p a[href*='mailto:']:hover::before,
 main .content_sidebar-note p a[href*='mailto:']:hover::before {
   background-image: url("../assets/hfkasta_stack.svg#m_link_mail");
-}
-
-main .content p a[href*='localhost']::before,
-main .content p a[href*='hfkasta']::before,
-main .content p a[href*='asta.hfk-bremen']::before,
-main .content p a[href*='asta.uiuiui.digital']::before,
-main .content p a[href*='mailto:']::before,
-main .content li a[href*='localhost']::before,
-main .content li a[href*='hfkasta']::before,
-main .content li a[href*='asta.hfk-bremen']::before,
-main .content li a[href*='asta.uiuiui.digital']::before,
-main .content li a[href*='mailto:']::before,
-nav .sidebar_note p a[href*='localhost']::before,
-nav .sidebar_note p a[href*='hfkasta']::before,
-nav .sidebar_note p a[href*='asta.hfk-bremen']::before,
-nav .sidebar_note p a[href*='asta.uiuiui.digital']::before,
-nav .sidebar_note p a[href*='mailto:']::before,
-nav .sidebar_note_top p a[href*='localhost']::before,
-nav .sidebar_note_top p a[href*='hfkasta']::before,
-nav .sidebar_note_top p a[href*='asta.hfk-bremen']::before,
-nav .sidebar_note_top p a[href*='asta.uiuiui.digital']::before,
-nav .sidebar_note_top p a[href*='mailto:']::before,
-main .content_sidebar-note p a[href*='localhost']::before,
-main .content_sidebar-note p a[href*='hfkasta']::before,
-main .content_sidebar-note p a[href*='asta.hfk-bremen']::before,
-main .content_sidebar-note p a[href*='asta.uiuiui.digital']::before,
-main .content_sidebar-note p a[href*='mailto:']::before {
-  background-image: url("../assets/hfkasta_stack.svg#m_link_internal-red");
-}
-
-main .content p a[href*='localhost']:hover::before,
-main .content p a[href*='hfkasta']:hover::before,
-main .content p a[href*='asta.hfk-bremen']:hover::before,
-main .content p a[href*='asta.uiuiui.digital']:hover::before,
-main .content p a[href*='mailto:']:hover::before,
-main .content li a[href*='localhost']:hover::before,
-main .content li a[href*='hfkasta']:hover::before,
-main .content li a[href*='asta.hfk-bremen']:hover::before,
-main .content li a[href*='asta.uiuiui.digital']:hover::before,
-main .content li a[href*='mailto:']:hover::before,
-nav .sidebar_note p a[href*='localhost']:hover::before,
-nav .sidebar_note p a[href*='hfkasta']:hover::before,
-nav .sidebar_note p a[href*='asta.hfk-bremen']:hover::before,
-nav .sidebar_note p a[href*='asta.uiuiui.digital']:hover::before,
-nav .sidebar_note p a[href*='mailto:']:hover::before,
-nav .sidebar_note_top p a[href*='localhost']:hover::before,
-nav .sidebar_note_top p a[href*='hfkasta']:hover::before,
-nav .sidebar_note_top p a[href*='asta.hfk-bremen']:hover::before,
-nav .sidebar_note_top p a[href*='asta.uiuiui.digital']:hover::before,
-nav .sidebar_note_top p a[href*='mailto:']:hover::before,
-main .content_sidebar-note p a[href*='localhost']:hover::before,
-main .content_sidebar-note p a[href*='hfkasta']:hover::before,
-main .content_sidebar-note p a[href*='asta.hfk-bremen']:hover::before,
-main .content_sidebar-note p a[href*='asta.uiuiui.digital']:hover::before,
-main .content_sidebar-note p a[href*='mailto:']:hover::before {
-  background-image: url("../assets/hfkasta_stack.svg#m_link_internal");
 }
 
 main .content p a[href*='.pdf']::before,
@@ -1463,6 +1453,50 @@ main .content_sidebar-note p a[href*='portal.hfk-bremen.de']:hover::before {
   main .content_sidebar-note p a[href*='https://']:hover::before {
     background-image: url("../assets/hfkasta_stack.svg#l_link_external");
   }
+  main .content p a[href*='localhost']::before,
+  main .content p a[href*='hfkasta']::before,
+  main .content p a[href*='asta.hfk-bremen']::before,
+  main .content p a[href*='asta.uiuiui.digital']::before,
+  main .content li a[href*='localhost']::before,
+  main .content li a[href*='hfkasta']::before,
+  main .content li a[href*='asta.hfk-bremen']::before,
+  main .content li a[href*='asta.uiuiui.digital']::before,
+  nav .sidebar_note p a[href*='localhost']::before,
+  nav .sidebar_note p a[href*='hfkasta']::before,
+  nav .sidebar_note p a[href*='asta.hfk-bremen']::before,
+  nav .sidebar_note p a[href*='asta.uiuiui.digital']::before,
+  nav .sidebar_note_top p a[href*='localhost']::before,
+  nav .sidebar_note_top p a[href*='hfkasta']::before,
+  nav .sidebar_note_top p a[href*='asta.hfk-bremen']::before,
+  nav .sidebar_note_top p a[href*='asta.uiuiui.digital']::before,
+  main .content_sidebar-note p a[href*='localhost']::before,
+  main .content_sidebar-note p a[href*='hfkasta']::before,
+  main .content_sidebar-note p a[href*='asta.hfk-bremen']::before,
+  main .content_sidebar-note p a[href*='asta.uiuiui.digital']::before {
+    background-image: url("../assets/hfkasta_stack.svg#l_link_internal-red");
+  }
+  main .content p a[href*='localhost']:hover::before,
+  main .content p a[href*='hfkasta']:hover::before,
+  main .content p a[href*='asta.hfk-bremen']:hover::before,
+  main .content p a[href*='asta.uiuiui.digital']:hover::before,
+  main .content li a[href*='localhost']:hover::before,
+  main .content li a[href*='hfkasta']:hover::before,
+  main .content li a[href*='asta.hfk-bremen']:hover::before,
+  main .content li a[href*='asta.uiuiui.digital']:hover::before,
+  nav .sidebar_note p a[href*='localhost']:hover::before,
+  nav .sidebar_note p a[href*='hfkasta']:hover::before,
+  nav .sidebar_note p a[href*='asta.hfk-bremen']:hover::before,
+  nav .sidebar_note p a[href*='asta.uiuiui.digital']:hover::before,
+  nav .sidebar_note_top p a[href*='localhost']:hover::before,
+  nav .sidebar_note_top p a[href*='hfkasta']:hover::before,
+  nav .sidebar_note_top p a[href*='asta.hfk-bremen']:hover::before,
+  nav .sidebar_note_top p a[href*='asta.uiuiui.digital']:hover::before,
+  main .content_sidebar-note p a[href*='localhost']:hover::before,
+  main .content_sidebar-note p a[href*='hfkasta']:hover::before,
+  main .content_sidebar-note p a[href*='asta.hfk-bremen']:hover::before,
+  main .content_sidebar-note p a[href*='asta.uiuiui.digital']:hover::before {
+    background-image: url("../assets/hfkasta_stack.svg#l_link_internal");
+  }
   main .content p a[href*='mailto:']::before,
   main .content li a[href*='mailto:']::before,
   nav .sidebar_note p a[href*='mailto:']::before,
@@ -1476,60 +1510,6 @@ main .content_sidebar-note p a[href*='portal.hfk-bremen.de']:hover::before {
   nav .sidebar_note_top p a[href*='mailto:']:hover::before,
   main .content_sidebar-note p a[href*='mailto:']:hover::before {
     background-image: url("../assets/hfkasta_stack.svg#l_link_mail");
-  }
-  main .content p a[href*='localhost']::before,
-  main .content p a[href*='hfkasta']::before,
-  main .content p a[href*='asta.hfk-bremen']::before,
-  main .content p a[href*='asta.uiuiui.digital']::before,
-  main .content p a[href*='mailto:']::before,
-  main .content li a[href*='localhost']::before,
-  main .content li a[href*='hfkasta']::before,
-  main .content li a[href*='asta.hfk-bremen']::before,
-  main .content li a[href*='asta.uiuiui.digital']::before,
-  main .content li a[href*='mailto:']::before,
-  nav .sidebar_note p a[href*='localhost']::before,
-  nav .sidebar_note p a[href*='hfkasta']::before,
-  nav .sidebar_note p a[href*='asta.hfk-bremen']::before,
-  nav .sidebar_note p a[href*='asta.uiuiui.digital']::before,
-  nav .sidebar_note p a[href*='mailto:']::before,
-  nav .sidebar_note_top p a[href*='localhost']::before,
-  nav .sidebar_note_top p a[href*='hfkasta']::before,
-  nav .sidebar_note_top p a[href*='asta.hfk-bremen']::before,
-  nav .sidebar_note_top p a[href*='asta.uiuiui.digital']::before,
-  nav .sidebar_note_top p a[href*='mailto:']::before,
-  main .content_sidebar-note p a[href*='localhost']::before,
-  main .content_sidebar-note p a[href*='hfkasta']::before,
-  main .content_sidebar-note p a[href*='asta.hfk-bremen']::before,
-  main .content_sidebar-note p a[href*='asta.uiuiui.digital']::before,
-  main .content_sidebar-note p a[href*='mailto:']::before {
-    background-image: url("../assets/hfkasta_stack.svg#l_link_internal-red");
-  }
-  main .content p a[href*='localhost']:hover::before,
-  main .content p a[href*='hfkasta']:hover::before,
-  main .content p a[href*='asta.hfk-bremen']:hover::before,
-  main .content p a[href*='asta.uiuiui.digital']:hover::before,
-  main .content p a[href*='mailto:']:hover::before,
-  main .content li a[href*='localhost']:hover::before,
-  main .content li a[href*='hfkasta']:hover::before,
-  main .content li a[href*='asta.hfk-bremen']:hover::before,
-  main .content li a[href*='asta.uiuiui.digital']:hover::before,
-  main .content li a[href*='mailto:']:hover::before,
-  nav .sidebar_note p a[href*='localhost']:hover::before,
-  nav .sidebar_note p a[href*='hfkasta']:hover::before,
-  nav .sidebar_note p a[href*='asta.hfk-bremen']:hover::before,
-  nav .sidebar_note p a[href*='asta.uiuiui.digital']:hover::before,
-  nav .sidebar_note p a[href*='mailto:']:hover::before,
-  nav .sidebar_note_top p a[href*='localhost']:hover::before,
-  nav .sidebar_note_top p a[href*='hfkasta']:hover::before,
-  nav .sidebar_note_top p a[href*='asta.hfk-bremen']:hover::before,
-  nav .sidebar_note_top p a[href*='asta.uiuiui.digital']:hover::before,
-  nav .sidebar_note_top p a[href*='mailto:']:hover::before,
-  main .content_sidebar-note p a[href*='localhost']:hover::before,
-  main .content_sidebar-note p a[href*='hfkasta']:hover::before,
-  main .content_sidebar-note p a[href*='asta.hfk-bremen']:hover::before,
-  main .content_sidebar-note p a[href*='asta.uiuiui.digital']:hover::before,
-  main .content_sidebar-note p a[href*='mailto:']:hover::before {
-    background-image: url("../assets/hfkasta_stack.svg#l_link_internal");
   }
   main .content p a[href*='.pdf']::before,
   main .content li a[href*='.pdf']::before,
