--- a/style/style.css
+++ b/style/style.css
@@ -1709,13 +1709,11 @@ h6 {
 }
 
 .wrapper main .content > ul li {
+  padding-left: 24.1px;
   list-style-type: none;
-}
-
-.wrapper main .content > ul li::before {
-  content: '-';
-  width: 24.1px;
-  display: inline-block;
+  background-image: url("../assets/m_dash.png");
+  background-position: top left;
+  background-repeat: no-repeat;
 }
 
 .wrapper main .content p a {
@@ -1898,8 +1896,9 @@ h6 {
   .wrapper main .content > ol {
     padding-left: 36px;
   }
-  .wrapper main .content > ul li::before {
-    width: 36px;
+  .wrapper main .content > ul li {
+    padding-left: 36px;
+    background-image: url("../assets/l_dash.png");
   }
   .wrapper main .content figure.wp-block-gallery li.blocks-gallery-item figure figcaption {
     font-size: 1.5625rem;
