Corrected conten links in paragraphs to inline-block

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -72,7 +72,7 @@ h6 {
 
         // Links in regular text
         p a {
-            display: inline;
+            display: inline-block;
             height: auto;
         }
 
