--- a/style/_content.scss
+++ b/style/_content.scss
@@ -193,7 +193,12 @@ h6 {
 
         // Tables
         .wp-block-table {
-            margin: 0;
+            margin: 0 auto;
+
+            td:first-child {
+                white-space: nowrap;
+                padding-right: 10px;
+            }
         }
     }
 
