Corrected link styling excluded from images and gallery

--- a/style/_links.scss
+++ b/style/_links.scss
@@ -40,7 +40,8 @@ main .content p,
 main .content li,
 nav .sidebar_note p,
 nav .sidebar_note_top p,
-main .content_sidebar-note p {
+main .content_sidebar-note p,
+main .content :not(figure) {
 
     a {
         min-height: $font-size-18 * 2;
@@ -150,7 +151,8 @@ main .content_sidebar-note p {
     main .content li,
     nav .sidebar_note p,
     nav .sidebar_note_top p,
-    main .content_sidebar-note p {
+    main .content_sidebar-note p,
+    main .content :not(figure) {
 
         // Exclude telefon-links
         a:not([href*='tel:']) {
