Content Links Styling corrected

--- a/style/_content.scss
+++ b/style/_content.scss
@@ -74,6 +74,7 @@ h6 {
         p a {
             display: inline-block;
             height: auto;
+            min-height: auto;
         }
 
         // Reset styling of buttons
