--- a/style/style.css
+++ b/style/style.css
@@ -662,7 +662,7 @@ footer ul li {
   font-size: 3.125rem;
   text-align: center;
   font-family: 'GT-Haptik-Regular', sans-serif;
-  font-weight: normal;
+  font-weight: 300;
   letter-spacing: 1px;
 }
 
